# darshan-jain-manufac-fast-api

./: Dockerfile  README.md  pyproject.toml
src/: main.py
