[project]
name = "darshan-jain-manufac-fast-api"
version = "0.1.0"
description = "A Dockerized FastAPI app providing APIs to generate UUIDs (synchronously and asynchronously) and fetch random cat images from an external API."
authors = [
    {name = "djain",email = "darshanjain318@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
